# kozzle-category-builder

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_SUMMARY.md  LLM_COMPRESSION_SUMMARY.md  MIN_WORD_COUNT_FEATURE.md  PERFORMANCE_FIXES.md  PERFORMANCE_FIXES_APPLIED.md  README.md  UPDATE_SUMMARY.md  database_schema.sql  mypy.ini  nohup.out  pyproject.toml  한글사전_개념분류_카테고리50.xlsx  한글사전_기능분류_카테고리50.xlsx  한글사전_분류카테고리_통합.json  한글사전_사용맥락분류_카테고리50.xlsx
output/: categorization_cache.json  word_categorization_small.json  words_cache.json
output-embedding/: cluster_summary.txt  label_cache.json  word_groups.csv  word_groups.json
output/test_classify/: predefined_categorization.json  predefined_categorization_cache.json
output/test_classify2/: predefined_categorization.json  predefined_categorization_cache.json
output/test_cycle/: compressed_categories_cycle_3.json
src/kozzle_word_grouper/: __init__.py  __main__.py  categorizer.py  category_aggregator.py  category_compressor.py  cli.py  clustering.py  connection_pool.py  core.py  embeddings.py  exceptions.py  export.py  labeler.py  models.py  monitoring.py  predefined_categorizer.py  retry.py  supabase_client.py  utils.py
tests/: conftest.py  test_clustering.py  test_connection_pool.py  test_core.py  test_exceptions.py  test_export.py  test_filtering.py  test_init.py  test_models.py  test_utils.py
